--- a/web/src/main/resources/templates/index.html
+++ b/web/src/main/resources/templates/index.html
@@ -72,11 +72,12 @@
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>井信息列表</cite></a>
                             </li>
-                            <!--<li>
-                                <a onclick="xadmin.add_tab('用户列表(静态表格)','member-list.html')">
+                            <li>
+                                <a onclick="xadmin.add_tab('排炮列表','/salvoByPage')">
                                     <i class="iconfont">&#xe6a7;</i>
-                                    <cite>用户列表(静态表格)</cite></a>
+                                    <cite>排炮列表</cite></a>
                             </li>
+                            <!--
                             <li>
                                 <a onclick="xadmin.add_tab('用户列表(动态表格)','member-list1.html',true)">
                                     <i class="iconfont">&#xe6a7;</i>
